<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Wallpo</string>
    <string name="subtitle">Stories for everyone</string>
    <string name="admonbdk">ca-app-pub-2941808068005217~6883147945</string>
    <string name="admobid">ca-app-pub-2941808068005217/4872724597</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must contain more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">1853438531420094</string>
    <string name="play_console_sub_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAjwSEVRE8R/a61oLgpK1Zh8vqJ+okH9WN2ElbIoBUaknAt/DnQm7U8AyY4pM7FatPsTczJ8FQdpiuQbu1bLOtFygH1i4Hn/N0IGFZQXagIV4pS0efAKQa0MTGKjzd8VCDkhcZg8irIImu88JGFFUh8tEerhMIdatMtwJOXjsedpZhyCLYx8kTM6sSPdrn0ozqjk5NBZuyhhFWRsO0LDSUd5pr+4la458JWhshopBx+Wctm0nG4W+wt1/tAA+YamGnlamlVhYs/rygxZGRvaS25hC2S8D4J1xDKvkKVF2jKop6zbC2DGbfDRQlptvDxnY/x1LpotpAdP1IlggiXgv/RQIDAQAB</string>
    <string name="fb_login_protocol_scheme">fb1853438531420094</string>
    <string android:name="com.twitter.sdk.android.CONSUMER_KEY" name="twitterkey">X7BoFWHi1wPb0SKeLzdbaKHhS</string>
    <string android:name="com.twitter.sdk.android.CONSUMER_SECRET" name="twittersecretkey">rpLzUy2PWJ2GOmB6dvIXLOxqecOOeecnAdhjyZwkRsGAzPKos6</string>
    <string name="donthaveaccount">Don\'t have account, <u>Sign up</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">Posts</string>
    <string name="fbnotice">Sorry emailid not available, Use google or wallpo signin to proceed.</string>
    <string name="fbcancel">Facebook signin request failed.</string>
    <string name="fberror">Error while Facebook signin request.</string>
    <string name="enteremail">Enter your email id.</string>
    <string name="emailnotvaild">Email id is not vaild.</string>
    <string name="enterpassword">Enter your password.</string>
    <string name="entername">Enter your name.</string>
    <string name="entersixchar">Password must be more than 6 character.</string>
    <string name="connectionerror">Connection error.</string>
    <string name="autherror">Error on wallpo server.</string>
    <string name="emailregistered">Email is already registered</string>
    <string name="registersuccessfully">Registered Successfully. Please Wait...</string>
    <string name="emailidpassnotmatched">The emailid and password you entered did not match our records. Please double-check and try again.</string>
    <string name="googlesign">Sign in with Google</string>
    <string name="facebooksign">Sign in with Facebook</string>
    <string name="defaultsignin">Defualt Sign in</string>
    <string name="signin">Sign In</string>
    <string name="yourname">Your Name</string>
    <string name="emailid">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="loginsmall">Log In</string>
    <string name="home">Home</string>
    <string name="Home">HOME</string>
    <string name="trending">Trending</string>
    <string name="Trending">TRENDING</string>
    <string name="explore">Explore</string>
    <string name="Explore">EXPLORE</string>
    <string name="notification">Notification</string>
    <string name="Notification">NOTIFICATION</string>
    <string name="monetization">Monetization</string>
    <string name="Monetization">MONETIZATION</string>
    <string name="search">Search</string>
    <string name="search.">Search...</string>
    <string name="Search">SEARCH</string>
    <string name="profile">Profile</string>
    <string name="Profile">PROFILE</string>
    <string name="editprofile">Edit Profile</string>
    <string name="upload">Upload</string>
    <string name="favourites">Favourites</string>
    <string name="messages">Messages</string>
    <string name="logout">Log Out</string>
    <string name="multipleaccounts">Multiple Accounts</string>
    <string name="wallpapersettings">Wallpaper Settings</string>
    <string name="suggestionnotification">Suggestion Notification</string>
    <string name="likedposts">Liked Posts</string>
    <string name="twofactorauthentication">Two-factor Authentication</string>
    <string name="sharewallpo">Share Wallpo</string>
    <string name="changelanguage">Change Language</string>
    <string name="nopostfav">You haven\'t favourite any posts.</string>
    <string name="autherrortryagain">Authentication Error, Restart the app or try again.</string>
    <string name="limit">#EarlySalary offers loans between 1,000 INR and 100,000 INR with #g from 7 to 50 daysdu oiuy #fsvss. loans between 1,000 INR and 100,00 INR So it\'s the main thing you are trying i.</string>
    <string name="premiumads">Premium Subscription</string>
    <string name="uppermark">\"</string>
    <string name="date">date</string>
    <string name="favouritetopicenotice">Put your favouite topic to get better suggestion explore, seprate it with \",\" eg:- marvel, movie, Leo Messi, Titanic, Football You can put upto 5 filters tag at a time.</string>
    <string name="monetize1no">▶  You profile should be completed, Your profile include profile picture, back picture, displayname, username, category, websites link (Optional), atleast 20 posts, email should be verified (Means you just have to click on link send to your register email id at the time of sign up or any other time.</string>
    <string name="monetize2no">▶  You should have minimum 20k subscribers on your accounts</string>
    <string name="monetize3no">▶  Be at least 18 years old, or should have a legal guardian older than 18 years of age who can handle your payments via Wallpo Ads. (We can also monetize your account if you are under 18 or don\'t have a guardian, Check with us by mailing on "ads@thewallpo.com" </string>
    <string name="monetize4no">▶  Your account will unmonetize if you keep posting nude pictures or your posts that are violent to or for society. </string>
    <string name="monetize5no">▶  Your account will unmonetize or delete immediately if your posts are violent or spreading hate or violent in the society.</string>
    <string name="monetize6no">▶  You have to follow all term and condition and also meet every upcoming terms and conditions of Wallpo and Wallpo Ads. .</string>
    <string name="partnerKey">iRFlQ869606a9a79d4e58b75cbf1888bf4fb3</string>
    <string name="notverifyemail">Email is not Verified, Plase verify your email..</string>
    <string name="username">\@ sayyedrizwanahmed</string>
    <string name="postsporfile">\"photoid\":88,</string>
    <string name="delete">Delete</string>
    <string name="viewprofile">View Profile</string>
    <string name="title_activity_albums">ScrollingActivity</string>
    <string name="cancelbig">CANCEL</string>
    <string name="verify">Verify</string>
    <string name="entercode">Enter the code.</string>
    <string name="seconds">" Seconds"</string>
    <string name="resendcodebig">RESEND CODE</string>
    <string name="wallpoads">Wallpo Ads</string>
    <string name="beta">Beta</string>
    <string name="growithwallpo">Grow with Wallpo</string>
    <string name="monetizewallpoaccount">Monetize your wallpo account</string>
    <string name="readintrocarefully">Read the instructions carefully before applying for monetization on your account.</string>
    <string name="zerosubs">" 0 / 20000 Subscribers"</string>
    <string name="mailus">" MAIL US "</string>
    <string name="monetize">Monetize</string>
    <string name="twostepauthbig">TWO-STEP AUTHENTICATION</string>
    <string name="feedback">Feedback</string>
    <string name="feedbacktitle">Make wallpo a better place..</string>
    <string name="enterfeedback">Enter Feedback...</string>
    <string name="sendbig">SEND</string>
    <string name="redeembig">REDEEM</string>
    <string name="reedemcoupon">Redeem Coupon</string>
    <string name="reedemcoupontxt">Enter coupon code and click on redeem which will redirect you to Play Store. or you can go to Play Store click on Redeem in Nav Menu and add the code to get Premium subscription.</string>
    <string name="couponhind">XXXXXXXXXXXXXXXXXXXXXXX</string>
</resources>