<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".fragment.MonetizeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/wallpoadslogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:src="@drawable/wallpoads" />

        <TextView
            android:id="@+id/wallpotxt"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wallpoadslogo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/helvetica"
            android:text="@string/wallpoads"
            android:textColor="@android:color/white" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wallpoadslogo"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/wallpoadslogo"
            android:layout_toRightOf="@id/wallpoadslogo"
            android:fontFamily="@font/segoeui"
            android:text="@string/beta"
            android:textColor="@android:color/white"
            android:translationY="-18dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/wallpotxt"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/moz_back">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="9dp"
                        android:fontFamily="@font/lovelo"
                        android:text="@string/growithwallpo"
                        android:textColor="@android:color/white" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/lovelo"
                        android:text="@string/monetizewallpoaccount"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/segoeui"
                        android:gravity="center"
                        android:text="@string/readintrocarefully"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/subtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/segoeui"
                        android:gravity="center"
                        android:text="@string/zerosubs"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/monetize1no"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/monetize2no"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/monetize3no"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/monetize4no"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/monetize5no"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/monetize6no"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/segoeui"
                        android:textColor="@android:color/holo_blue_bright" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/sendmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="9dp"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="10dp">


                        <TextView
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/mailus"
                            android:textColor="@android:color/black" />


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="9dp"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="10dp">


                        <TextView
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/monetize"
                            android:textColor="@android:color/black" />


                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>


    </RelativeLayout>


</FrameLayout>