<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainlay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/lovelo"
            android:text="@string/feedback"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/feedbacktitle"
            android:textColor="@android:color/white" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sharetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_margin="12dp"
            android:background="@drawable/roundfeedbackinput"
            android:fontFamily="@font/segoeui"
            android:hint="@string/enterfeedback"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:maxLength="5000"
            android:paddingRight="8dp"
            android:paddingBottom="80dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sharetext"
            android:layout_margin="8dp"
            android:background="@drawable/roundprofilebutton"
            android:fontFamily="@font/helvetica"
            android:text="@string/sendbig"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>